# queues-project-api

./: .env.example  .gitignore  Dockerfile  README.md  deployment.sh  pyproject.toml  schema.sql
queues_project_api/: __init__.py  main.py
queues_project_api/controllers/: firebase.py  verification.py
queues_project_api/models/: EmailActivation.py  UserActivation.py  UserLogin.py  UserSignup.py
queues_project_api/utils/: database.py  tokens.py
server/: __init__.py  main.py
server/controllers/: firebase.py
server/models/: UserActivation.py  UserLogin.py  UserSignup.py
server/utils/: database.py
